css/mediaqueries.css
@media only screen and (min-width: 1440px) {
  .main-grid-container {
    display: grid;
    padding: 5vw 6.67vw;
    grid-auto-rows: auto;
    gap: 4rem;
  }

  .grid-item {
    width: 25vw;
    height: 450px;
  }

  .title-card {
    font-size: 1.2rem;
  }

  .title-description {
    font-size: 0.7rem;
  }
}

/*888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888*/
@media only screen and (max-width: 1018px) {
  .links-others {
    padding: 60px 0 0 0;
  }

  .blog-list,
  .socialmedia-list .course-list {
    gap: 2rem;
  }
}
/*888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888*/
@media only screen and (max-width: 800px) {
  .main-grid-container {
    grid-template-columns: 1fr 1fr;
    padding: 5vw 6vw;
    gap: 4vw;
  }

  .grid-item {
    width: 40vw;
    height: 300px;
  }

  .hamburger-nav {
    display: block;
    border: 1px solid #0266ff;
    padding: 16px;
    border-radius: 10000px;
  }

  .hamburger-nav:hover {
    border: 1px solid #dcf10d;
  }
  .static {
    flex-direction: column;
  }

  .menu {
    display: none;
  }
  .mobile {
    z-index: 9;
    position: fixed;
    top: 0;
    height: 100vh;
    justify-content: start;
    align-items: flex-start;
    gap: 25px;
    background: linear-gradient(180deg, #10131c, #192140 30%, transparent);
  }

  .nav-mobile-desktop {
    width: 90vw;
    align-items: center;
    margin: 2rem 0rem;
  }

  .menu-mobile {
    display: flex;
    flex-direction: column;
    gap: 20px;
    width: 90vw;
    align-items: flex-end;
  }
  .menu {
    display: none;
  }

  .menu ul {
    display: flex;
    flex-direction: column;
    align-items: end;
  }

  .show-mobile {
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    gap: 20px;
    width: 90vw;
    align-items: flex-end;
  }
}

/*888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888*/
@media only screen and (max-width: 768px) {
  .title-card {
    font-size: 3vw;
  }
  .title-description {
    font-size: 1.8vw;
  }
}

/*888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888*/
@media only screen and (max-width: 500px) {
  .input-form input {
    width: 50%;
  }
}

/*888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888*/
@media only screen and (max-width: 450px) {
  .main-grid-container {
    grid-template-columns: 1fr;
    padding: 5vw 5vw;
    gap: 4vw;
  }

  .grid-item {
    width: 90vw;
    height: 257px;
  }

  .title-card {
    font-size: 5vw;
  }
  .title-description {
    font-size: 3vw;
  }

  ul.legal {
    font-size: 10px;
  }

  ul.course-list li {
    margin-right: 20px;
    margin-bottom: 10px;
  }
}

